# mp-k8s

./: .gitignore  apply-all-yaml.sh  build-and-push-docker.sh  cluster-config.yaml  cluster.yaml  configmap-prometheus-server.yaml  job-role.yaml  project_notes.md  pv.yaml  redpanda-values.yaml  set-up.sh  setup-kwsm-cluster.sh  setup.sh
aot-compiler/: Cargo.toml  build.rs  dockerfile
cluster-yaml/: cluster-configs.yaml  pvc.yaml  rolebindings.yaml  roles.yaml  storageClass.yaml
data-access/: deploy.sh  deployment.yaml  dockerfile  service.yaml
data-producer/: deployment.yaml
data-source/: deployment.yaml
debug/: debug-pod.yaml  dockerfile  jupyter-notebook.yaml  test_arg_runner.yaml
file-processor/: dockerfile  file-processor.py
file-uploader/: app.py  deploy.sh  dockerfile  file-uploader-deployment.yaml  job-role.yaml  pvc.yaml  (+2 more)
selector-workload/: Cargo.toml  automate_build.sh  dockerfile  logs.txt
selector-workload/logs/6zdbvozfkzfgmbeqzkrdxm/: output.csv
selector-workload/logs/chw6pgspex5jzhq89dksx6/: event_times_chw6pgspex5jzhq89dksx6.csv  output.csv
selector-workload/logs/dq4fnys82whveidxfetjxq/: event_times_dq4fnys82whveidxfetjxq.csv  output.csv
selector-workload/logs/dxsnkel9nwavtvgow5uvcr/: output.csv
selector-workload/logs/kmxfantnfaytppw5thplpb/: output.csv
selector-workload/logs/nrwl7kvj8ygy8pjqb7p9xu/: event_times_nrwl7kvj8ygy8pjqb7p9xu.csv
selector-workload/logs/yc8y48prewj46vpr3vbxb8/: event_times_yc8y48prewj46vpr3vbxb8.csv
selector-workload/src/: main.rs  workload_runner.rs
selector-workload/src/processing/: aggregator.rs
(+104 files in other folders)
